creacion del header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Jeanpierrer Nuñez - Desarrollador Web</title>
 </head>
 <body>
+    <header>
+        <div class="header">
+            <input type="checkbox" id="open-menu" class="header__checkbox">
+            <label for="open-menu" class="header__open-nav-button" role="button"><i class="bi bi-three-dots-vertical"></i></label>
+            <div class="header__logo-container">
+                <img src="logo.svg" alt="Logo Jeanpierrer Nuñez" class="header__logo logo--desktop">
+                <img src="logo-m.svg" alt="Logo Jeanpierrer Nuñez" class="header__logo logo--mobile">
+            </div>
+            <nav class="header__nav">
+                <ul class="header__nav-list">
+                    <li class="header__nav-item"><a href="">PROFILE</a></li>
+                    <li class="header__nav-item"><a href="">PORTFOLIO</a></li>
+                    <li class="header__nav-item"><a href="">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 </body>
 </html>
