--- a/index.html
+++ b/index.html
@@ -96,6 +96,27 @@
             </div>
         </div>
     </section>
+    <section class="contact">
+        <div class="contact__card">
+            <h2>Contacto</h2>
+            <form action="#" method="POST" class="contact__form">
+                <div class="contact__group">
+                    <label for="name">Nombre</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="contact__group">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="contact__group">
+                    <label for="message">Mensaje</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="contact__button">Enviar</button>
+            </form>
+        </div>
+    </section>
+    
 
 </body>
 </html>
